fix: fix responsive spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,12 +6,18 @@
   
 }
 
-main{
+body{
   width: 100%;
   height: 100vh;
+}
+
+main{
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   overflow: hidden;
   flex-wrap: wrap;
   padding: 0 0.5rem;
+ 
 }
